fix: component layout issue resolved

--- a/src/styles/DiagramEditor.css
+++ b/src/styles/DiagramEditor.css
@@ -274,66 +274,79 @@
   
   .sb-mobile-palette {
     width: 240px;
-    height: 10%;
+    /* height: 10%; */
+    height: 100%;
     padding-top: 100px;
+    /* padding-top: 0px; */
     float: left;
   }
   
   .sb-mobile-palette-bar {
     display: none;
   }
+
   
-  .sb-mobile-diagram {
+  
+  /* .sb-mobile-diagram {
     width: calc(100% - 242px);
     height: 100%;
     float: right;
+  } */
+
+  .sb-mobile-diagram {
+    flex-grow: 1;
+    overflow: auto;
   }
+
+  
   .sb-bpmn-editor {
     border-color: rgba(0, 0, 0, 0.12);
     border-width: 1px 1px 1px 0px;
     border-style: solid;
   }
   
-  @media (max-width: 550px) {
-    .sb-bpmn-editor {
-      border-width: 0px 1px 1px;
-    }
-  
-    .sb-mobile-palette {
-      z-index: 19;
-      position: absolute;
-      display: none;
-      transition: transform 300ms linear, visibility 0s linear 300ms;
-      width: 39%;
-      height: 100%;
-    }
-  
-    .sb-mobile-palette-bar {
-      display: block;
-      width: 100%;
-      background: #fafafa;
-      padding: 10px 10px;
-      border: 0.5px solid #e0e0e0;
-      min-height: 40px;
-    }
-  
-    .sb-mobile-diagram {
-      width: 100%;
-      height: 100%;
-      float: left;
-      left: 0px;
-    }
-  
-    #palette-icon {
-      font-size: 20px;
-    }
+  .db-toolbar-container {
+    width: 100%;
+    background-color: #f5f5f5; 
+    border-top: 1px solid #e0e0e0;
   }
-  
+
+@media (max-width: 550px) {
+  .diagram-container {
+    flex-direction: column;
+  }
+
+  .sb-mobile-palette {
+    width: 100%;
+    height: auto;
+  }
+
+  .diagram-and-toolbar-container {
+    width: 100%;
+    height: calc(100% - 40px); /* Adjust based on palette height */
+  }
+
+  .sb-mobile-diagram {
+    height: calc(100% - 40px); /* Adjust based on toolbar height */
+  }
+}
   .sb-mobile-palette-open {
     position: absolute;
     display: block;
     right: 20px;
   }
+
+  .diagram-container {
+    display: flex;
+    height: 100vh;
+}
+
+.diagram-and-toolbar-container {
+  display: flex;
+  flex-direction: column;
+  width: calc(100% - 240px);
+  height: 60%;
+}
   
   
   [class^='sf-diagram-icon-'],
